# RRR-Type

./: .gitignore  CMakeLists.txt  README.md  clean.bat  clean.sh  install.bat  install.sh  main.cpp  uninstall.bat  uninstall.sh  vcpkg.json
.github/workflows/: ci-cd-pipeline.yml
ECS/: Entity.hpp  main.cpp
ECS/Components/: Components.hpp
ECS/Systems/: ASystem.hpp  DrawSystem.hpp  SystemsRegistry.hpp
Game/: clientMain.cpp  serverMain.cpp
GameEngine/: Entity.hpp  Keys.hpp  RegistryManager.hpp  Timer.hpp  main.cpp
GameEngine/Components/: Components.hpp
GameEngine/Graphicals/: AGraphical.hpp  SFMLGraphical.hpp
GameEngine/Systems/: ASystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  DrawSystem.hpp  GravitySystem.hpp  HealthSystem.hpp  JumpSystem.hpp  PositionSystem.hpp
GameEngine/include/: Keys.hpp  RegistryManager.hpp  Timer.hpp
GameEngine/include/Components/: Components.hpp  ComponentsRegistry.hpp  ComponentsSerializer.hpp
GameEngine/include/Graphicals/: AGraphical.hpp  SFMLGraphical.hpp
GameEngine/include/Systems/: ASystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  DrawSystem.hpp  GravitySystem.hpp  HealthSystem.hpp  JumpSystem.hpp  NetworkSystem.hpp  PositionSystem.hpp  SystemsRegistry.hpp
GameEngine/src/: Keys.cpp  RegistryManager.cpp  Timer.cpp
GameEngine/src/Components/: ComponentsSerializer.cpp
GameEngine/src/Graphicals/: AGraphical.cpp  SFMLGraphical.cpp
GameEngine/src/Systems/: ASystem.cpp  CollisionSystem.cpp  ControlSystem.cpp  DrawSystem.cpp  GravitySystem.cpp  HealthSystem.cpp  JumpSystem.cpp  NetworkSystem.cpp  PositionSystem.cpp
Network/: client.cpp  main.cpp  server.cpp
Network/include/: SerializerManager.hpp
Network/include/Communication/: ACommunication.hpp  UDPClientCommunication.hpp  UDPServerCommunication.hpp
Network/src/: SerializerManager.cpp
Network/src/Communication/: ACommunication.cpp  UDPClientCommunication.cpp  UDPServerCommunication.cpp
docs/: index.md
docs/Dependencies/: asio.md  index.md  package-manager.md  sfml.md
docs/Usage/: index.md
docs/Usage/Unix/: index.md  usage-with-scripts.md  usage-without-scripts.md
docs/Usage/Windows/: index.md  usage-with-scripts.md  usage-without-scripts.md
docs/Workflows/: ci-cd.md
src/: ASystem.hpp  Components.hpp  ControlSystem.hpp  DrawSystem.hpp  IGraphical.hpp  Keys.hpp  PositionSystem.hpp  Registry.hpp  RegistryManager.hpp  SFMLGraphical.hpp  SparseArray.hpp  main.cpp
src/Components/: Components.hpp  ComponentsContainer.hpp  ComponentsRegistry.hpp
src/Graphicals/: AGraphical.hpp  IGraphical.hpp  SFMLGraphical.hpp
src/Systems/: ASystem.hpp  ControlSystem.hpp  DrawSystem.hpp  PositionSystem.hpp
